infra/pihole/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: network
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pihole.homelab.internal`)
      kind: Rule
      services:
        - name: pihole-web
          port: 80
